# elastic_search_demo

./: .gitignore  README.md  pyproject.toml
backend/: es_client.py  main.py
data/: embed_utils.py  preprocessing.py
data/processed/: processed_products.json
data/raw/: products.json
frontend/: streamlit_app.py
tests/data/: test_embed_utils.py
